# rc_remote

./: .cproject  .gitignore  .gitlab-ci.yml  .mxproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  movie.txt  rc_remote.cbp  rc_remote.elf  rc_remote.hex  rc_remote.ioc  rc_remote.map  rc_remote.xml  temp.cbp
App/button/: buttonApp.cpp  buttonApp.hpp
App/flash/: flash.cpp  flash.hpp
App/gpio/: gpioApp.cpp  gpioApp.hpp
App/logger/: logger.cpp  logger.hpp
App/nrf24/: nrf24.c  radioApp.cpp  radioApp.hpp  radioClass.cpp  radioClass.hpp  radioTask.cpp  radioTask.hpp
App/nrf24/drivers/: nRF24L01.h  nrf24.c  nrf24.h
App/power/: powerApp.cpp
App/sensors/: analogRead.hpp  sensorApp.cpp  sensorsTask.cpp  sensorsTask.hpp
App/sensors/battery/: battery.cpp  battery.hpp
App/sensors/hall_sensor/: ss49.cpp  ss49.hpp
App/ws2812/: ws2812.cpp  ws2812.h  ws2812.hpp  ws2812App.cpp
Core/Inc/: FreeRTOSConfig.h  main.h  spi.h  stm32l1xx_hal_conf.h  stm32l1xx_it.h  usb.h
Core/Src/: adc.c  dma.c  freertos.c  gpio.c  main.c  main.cpp  spi.c  stm32l1xx_hal_msp.c  stm32l1xx_hal_timebase_tim.c  stm32l1xx_it.c  usart.c  usb.c
Drivers/: Makefile  rc_remote.map
Tests/: CMakeLists.txt  main.cxx
Tests/Modules/: stm32l1xx_hal.h
Tests/Modules/HAL/: stm32l1xx_hal.h  stm32l1xx_hal_adc.cpp  stm32l1xx_hal_adc.h  stm32l1xx_hal_def.h  stm32l1xx_hal_gpio.cpp  stm32l1xx_hal_gpio.h  stm32l1xx_hal_uart.c  stm32l1xx_hal_uart.h
Tests/Modules/battery/: batterytest.cxx
Tests/Modules/gpio/: gpio.h  gpiotest.cxx  stm32l1xx_hal_gpio.cpp  stm32l1xx_hal_gpio.h
Tests/Modules/gpio/fake_includes/: stm32l1xx_hal_gpio.cpp  stm32l1xx_hal_gpio.h
Tests/Modules/hall_sensor/: ss49test.cxx
Tests/Modules/logger/: loggertest.cxx
